# invisible-backend

./: .dockerignore  .env  .gitignore  API.md  CHANGELOG.md  COPYRIGHT  Caddyfile  Cargo.toml  Dockerfile.api  Dockerfile.auth  Dockerfile.relay  LICENSE  Makefile  README.md  docker-compose.yml  fix_tests.py  presign_response.json  test_numsub.rs  test_presign.rs
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
api/: Cargo.toml
api/src/: backup.rs  e2ee.rs  lib.rs  main.rs  worker.rs
api/tests/: e2ee_api_test.rs  fixtures.rs  test_presign.rs  worker_test.rs
auth/: Cargo.toml
auth/src/: main.rs
docs/: ARCHITECTURE_OPTIMIZATIONS.md  AUTH.md  CLIENT_GUIDE.md  api.md  client_guide.md  overview.md
migrations/: 20260416000001_initial_schema.sql  20260416000002_message_history.sql  20260416000003_fix_sessions.sql  20260416000004_e2ee_keys.sql  20260416000005_e2ee_messages.sql  20260416000007_otk_count.sql  20260417000001_dialog_read_states.sql  20260417000002_user_key_backups.sql  20260418000001_alter_message_urls_to_text.sql
relay/: Cargo.toml
relay/src/: lib.rs  main.rs
relay/tests/: ws_relay_test.rs
shared/: Cargo.toml
shared/src/: bin_test.rs  config.rs  db.rs  lib.rs  models.rs  repository.rs
src/: lib.rs  main.rs
test_tool/: package-lock.json  package.json  test_figment.rs  test_s3.rs  test_s3_presign.rs
test_tool/src/: all_tests.js  api_test.js  bin_test.rs  config.js  e2ee_test.js  ws_test.js
tests/: ws_relay_test.rs
