[package]
name = "invisible-backend"
version = "0.0.1-alpha"
edition = "2024"
description = "Invisible Backend API"
publish = false

[dependencies]
# Web framework
axum = { version = "0.8.9", features = ["ws", "macros"] }
futures = "0.3"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling (as per AGENTS.md guidelines)
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-tungstenite = "0.29.0"
