[workspace]
resolver = "2"
members = [
    "relay",
    "api",
    "shared"
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# Web framework
axum = "0.8.9"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Database & Cache
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Auth & Crypto
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

# Testing
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.29.0"
