[package]
name = "auth"
version = "0.1.0"
edition = "2024"
description = "Invisible Backend API - Auth Server"
publish = false

[dependencies]
# Local workspace crates
shared = { path = "../shared" }

# Web framework
axum = { workspace = true, features = ["macros"] }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Auth & Crypto
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }

rust-s3 = "0.37.1"
uuid = { version = "1.23.0", features = ["v4"] }
