[package]
name = "relay"
version = "0.0.1-alpha"
edition = "2024"
description = "Invisible Backend API - Relay Server"
publish = false

[dependencies]
# Local workspace crates
shared = { path = "../shared" }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Web framework
axum = { workspace = true, features = ["ws", "macros"] }
futures = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.23.0", features = ["v4"] }
tracing-loki = { version = "0.2.6", features = ["rustls"] }
url = "2.5.8"

[dev-dependencies]
tokio-tungstenite = { workspace = true }
