[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust-s3 = "0.37.1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
dotenvy.workspace = true
url = "2.5.8"

[[bin]]
name = "bin_test"
path = "src/bin_test.rs"
